--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "node": ">= 16.15.1",
     "npm": ">= 8.11.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/dany-fedorov/gerror.git"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "keywords": [],
   "author": "Dany Fedorov",
   "license": "MIT",
