--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/dany-fedorov/gerror.git"
+    "url": "git://github.com/dany-fedorov/g-exception.git"
   },
   "publishConfig": {
     "access": "public"
