--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "g-exception",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "prepare": "rm ./dist && npm run build",
+    "prepare": "rm -rf ./dist && npm run build",
     "build-watch": "chokidar './src/**/*.ts' -c 'npm run build' -i './node_modules/**/*' --initial"
   },
   "engines": {
