--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "g-exception",
-  "version": "0.0.3",
-  "description": "",
+  "version": "0.0.4",
+  "description": "G",
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
