--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
     "declaration": true
   },
   "include": [
-    "src"
+    "src",
+    "tests",
+    "scripts"
   ],
   "exclude": [
     "node_modules",
