--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "serialize-anything": "^1.1.10"
   }
 }
